scheduler for event

--- a/producer-data-stream/src/main/resources/application.properties
+++ b/producer-data-stream/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.Str
 
 stream.data.topic_name=event_data_stream
 stream.data.uri=https://stream.wikimedia.org/v2/stream/recentchange
+
+event.cron.schedule=0 56 16 * * *
+##specify event.duration in min
+event.duration=5
+event.cron.enable=true
