--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -13,10 +13,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.camelcase</groupId>
-	<artifactId>expert-view</artifactId>
+	<artifactId>backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	<name>expert-view</name>
+	<name>backend</name>
 	<description>Expert view for Analytics</description>
 	<properties>
 		<java.version>17</java.version>
