--- a/backend/consumer-data-stream/src/main/resources/application.properties
+++ b/backend/consumer-data-stream/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-server.port=8081
 spring.kafka.consumer.bootstrap.server=localhost:9092
 spring.kafka.consumer.group-id=dataStreamGroup
 spring.kafka.consumer.auto-offset-reset=earliest
@@ -7,3 +6,16 @@ spring.kafka.consumer.value-deserialization=org.apache.kafka.common.serializatio
 stream.data.topic_name=event_data_stream
 
 spring.data.mongodb.uri=mongodb://localhost/Expert-view
+
+# The format used for the keystore. It could be set to JKS in case it is a JKS file
+server.ssl.key-store-type=PKCS12
+# The path to the keystore containing the certificate
+server.ssl.key-store=classpath:keystore/camelcase.p12
+# The password used to generate the certificate
+server.ssl.key-store-password=Password@123
+# The alias mapped to the certificate
+server.ssl.key-alias=camelcase
+
+server.port=443
+
+registry.allow.origins=http://localhost:3000
